--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Notable&family=Raleway:wght@400;500;600&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/9e70dce2af.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
