--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Notable&family=Raleway:wght@400;500;600&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/9e70dce2af.js" crossorigin="anonymous"></script>
+
+  <!--Bootstrap-->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
